inculde GC details in our logs (for now)